--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<html>
+<head>
+	<link rel='stylesheet' type='text/css' href='style.css'>
+</head>
+<h1>hello, world!</h1>
+
+<h2>About me</h2>
+
+<p>I currently reside in Stavanger, Norway. I am originally from Mumbai, India but and have been in various different places before coming to Norway.</p>
+
+<p>You can find my <a href="cv_may2024.pdf">CV</a> here.</p>
+
+<h3>Some research projects</h3>
+
+<p>Project1.</p>
+
+<p>Other project.</p>
+<footer>
+  <p>Author: Gaurang Parkar<br>
+  <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
+</footer>
