--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <head>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
-<h1>hello, world!</h1>
-
-<h2>About me</h2>
-
-<p>I currently reside in Stavanger, Norway. I am originally from Mumbai, India but and have been in various different places before coming to Norway.</p>
-
+<h1 id="hello-world">hello, world!</h1>
+<h2 id="about-me">About me</h2>
+<p>My name is Gaurang Parkar and I was born in the crowded financial and entertainment capital of India, Mumbai. I moved to the south to the city of Tiruchirappalli, Tamil Nadu to pursue my undergraduate degree then to the beautiful city of San Francisco in California where I decided to study physics at San Francisco State University and then to the small town of Stony Brook in Long Island, New York to join the graduate program at Stony Brook University. I then found the opportunity to move to Stavanger, Norway to pursue my PhD in at the University of Stavanger as part of the <a href="https://deeprtp.uis.no/">DeepRTP</a> project where I currently reside.</p>
+<p>I have successfully defended my PhD thesis in June 2024 and decided not to pursue an academic career later. 
+ I am still looking for some new exciting opportunities which would keep me entertained and at the same time would make use of my skills. If you think that I can be of use to you send me an email.</p>
 <p>You can find my <a href="cv_may2024.pdf">CV</a> here.</p>
-
-<h3>Some research projects</h3>
-
-<p>Project1.</p>
-
-<p>Other project.</p>
+<p>Find my <a href="thesis_masters.pdf">Masters thesis</a> and <a href="https://inspirehep.net/files/34a1be4fa827574846fa06c7fd9a3259">PhD thesis</a>.</p>
+<p>Check out my <a href="https://inspirehep.net/authors/1987424">publications</a>.</p>
+<h3 id="research-projects"><a href="projects.html">Research projects</a></h3>
 <footer>
   <p>Author: Gaurang Parkar<br>
   <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
