--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,8 @@
 <head>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
-<h1 id="nothing-here-yet.">Nothing here yet.</h1>
+<h1 id="research-projects">Research projects</h1>
+<p>Find my <a href="thesis_masters.pdf">Masters thesis</a> and <a href="https://inspirehep.net/files/34a1be4fa827574846fa06c7fd9a3259">PhD thesis</a>.</p>
 <footer>
   <p>Author: Gaurang Parkar<br>
   <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
