--- a/software.html
+++ b/software.html
@@ -3,11 +3,13 @@
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <h1 id="software">Software</h1>
-<p>I use MacOS as my operating system since mid 2022. I had used <a href="https://archlinux.org/">Arch Linux</a> and <a href="https://ubuntu.com/">Ubuntu </a> for many years before that but switched to MacOS due to the performance and power efficiency of Apple Silicon chips.</p>
-<p>I use <a href="https://neovim.io/">neovim</a> as my main editor for most applications like building this website. I use <a href="https://code.visualstudio.com/">VS Code</a> for larger projects.</p>
-<p>I use the <a href="https://julialang.org/">Julia</a> programming language for most of my calculations. It has almost C&#47;C++ like performance while being sufficiently high level and easy to use.</p>
-<p>I also use <a href="https://www.wolfram.com/mathematica/">Wolfram Mathematica</a> for small calculations and some libraries in C and C++. I can use <a href="https://www.python.org/">python</a>, however I have not used it much since I started using Julia as I find it to be quite slow.</p>
-<p>I use <a href="https://www.latex-project.org/">Latex</a> for writing documents, and <a href="https://ctan.org/pkg/beamer">beamer</a> to make presentations. I also like the MacOS presentation app called <a href="https://en.wikipedia.org/wiki/Keynote_(presentation_software)">Keynote</a>.</p>
+<ul>
+<li>I use MacOS as my operating system since mid 2022. I had used <a href="https://archlinux.org/">Arch Linux</a> and <a href="https://ubuntu.com/">Ubuntu </a> for many years before that but switched to MacOS due to the performance and power efficiency of Apple Silicon chips.</li>
+<li>I use <a href="https://neovim.io/">neovim</a> as my main editor for most applications like building this website. I use <a href="https://code.visualstudio.com/">VS Code</a> for larger projects.</li>
+<li>I use the <a href="https://julialang.org/">Julia</a> programming language for most of my calculations. It has almost C&#47;C++ like performance while being sufficiently high level and easy to use.</li>
+<li>I also use <a href="https://www.wolfram.com/mathematica/">Wolfram Mathematica</a> for small calculations and some libraries in C and C++. I can use <a href="https://www.python.org/">python</a>, however I have not used it much since I started using Julia as I find it to be quite slow.</li>
+<li>I use <a href="https://www.latex-project.org/">Latex</a> for writing documents, and <a href="https://ctan.org/pkg/beamer">beamer</a> to make presentations. I also like the MacOS presentation app called <a href="https://en.wikipedia.org/wiki/Keynote_(presentation_software)">Keynote</a>.</li>
+</ul>
 <footer>
   <p>Author: Gaurang Parkar<br>
   <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
