--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 <p><img src="photo.jpg" alt="drawing" width="300"/></p>
 <p>My name is Gaurang Parkar and I&#8217;m a (former) theoretical physicist. I was born in the crowded financial and entertainment capital of India, Mumbai. I moved to the south to the city of Tiruchirappalli, Tamil Nadu to pursue my undergraduate degree then to the beautiful city of San Francisco in California where I decided to study physics at San Francisco State University and then to the small town of Stony Brook in Long Island, New York to join the graduate program at Stony Brook University. I then found the opportunity to move to Stavanger, Norway to pursue my PhD in at the University of Stavanger as part of the <a href="https://deeprtp.uis.no/">DeepRTP</a> project where I currently reside.</p>
 <p>I have successfully defended my PhD thesis in June 2024 and decided not to pursue an academic career later. 
- I am still looking for some new exciting opportunities which would keep me entertained and at the same time would make use of my skills. If you think that I can be of use to you send me an email.</p>
-<p>You can find my <a href="cv_may2024.pdf">CV</a> here.</p>
-<p>Find my <a href="thesis_masters.pdf">Masters thesis</a> and <a href="https://inspirehep.net/files/34a1be4fa827574846fa06c7fd9a3259">PhD thesis</a>.</p>
-<p>Check out my <a href="https://inspirehep.net/authors/1987424">publications</a>.</p>
-<h4 id="research"><a href="projects.html">Research</a></h4>
-<h4 id="software"><a href="software.html">Software</a></h4>
+ I am still looking for some new exciting opportunities which would keep me entertained and at the same time would make use of my skills. If you think that I can be of use to you send me an <a href="gaurang@gaurangparkar.com">email</a>.</p>
+<h3 id="other-information">Other information</h3>
+<ul>
+<li>Find my <a href="cv_may2024.pdf">CV</a> here.</li>
+<li>Check out my <a href="https://inspirehep.net/authors/1987424">publications</a>.</li>
+<li><a href="projects.html">Research</a> : Some information on the various research projects that I have been involved over the last few years.</li>
+<li><a href="software.html">Software</a> tools I use.</li>
+</ul>
 <footer>
   <p>Author: Gaurang Parkar<br>
   <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
