--- a/software.html
+++ b/software.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<title>Homepage of Gaurang Parkar</title>
+	<h4><a href="index.html">Home</a>  <span style="margin: 0 10px"></span>  <a href="projects.html">Research</a></h4>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <h1 id="software">Software</h1>
