--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<title>Homepage of Gaurang Parkar</title>
+	<h4><a href="index.html">Home</a>  <span style="margin: 0 10px"></span>  <a href="projects.html">Research</a></h4>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <h2 id="about-me">About me</h2>
@@ -13,6 +15,7 @@
 <li>Check out my <a href="https://inspirehep.net/authors/1987424">publications</a>.</li>
 <li><a href="projects.html">Research</a> : Some information on the various research projects that I have been involved over the last few years.</li>
 <li><a href="software.html">Software</a> tools I use.</li>
+<li>Some other <a href="interests.html">interests</a>.</li>
 </ul>
 <footer>
   <p>Author: Gaurang Parkar<br>
