--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,19 @@
 <html>
 <head>
+	<title>Homepage of Gaurang Parkar</title>
+	<h4><a href="index.html">Home</a>  <span style="margin: 0 10px"></span>  <a href="projects.html">Research</a></h4>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <h1 id="research-projects">Research projects</h1>
 <p>Find my <a href="thesis_masters.pdf">Masters thesis</a> and <a href="https://inspirehep.net/files/34a1be4fa827574846fa06c7fd9a3259">PhD thesis</a>.</p>
+<h3 id="heavy-quark-potential-on-hisq-lattices">Heavy Quark Potential On HISQ Lattices:</h3>
+<p>The interactions of heavy quark and anti-quark pair are essential in understanding the primordial state of matter created in heavy-ion collisions, the <a href="https://en.wikipedia.org/wiki/Quark%E2%80%93gluon_plasma">quark-gluon plasma </a>. These interactions can be studied through a complex potential between these static colour sources in the presence of a thermal medium. Together with my supervisor Alexander Rothkopf, Rasmus Larsen (postdoc at University of Stavanger) and colleagues at the HotQCD collaboration we studied this potential using lattice QCD simulations using the Highly Improved Staggered Quark(HISQ) action. We computed the Wilson Line correlator in Coulomb gauge and extracted the potential using four different methods; Gaussian fits, HTL-inspired fits, the Pade and Bayesian reconstruction, all having a different set of assumptions. The BR-method was rendered inapplicable due to the presence of non-monotonicity in effective masses at higher temperatures. We found that contrary to previous studies, the real-part of the potential showed no temperature dependence from all methods except for the HTL-inspired fits. Check out the <a href="https://arxiv.org/pdf/2110.11659">full manuscript</a> for more details.</p>
+<p><img src="PaperFig_ReV_6740.png" alt="alt text" width="350"/> <img src="PaperFig_ReV_7825.png" alt="alt 2" width="350"/></p>
+<h3 id="heavy-quark-potential-on-quenched-lattices">Heavy Quark Potential on Quenched Lattices:</h3>
+<p>Discoveries from the heavy quark potential on HISQ lattices were quite puzzling and were contrary to previous studies and general intuition. Thus, we reinvestigated the interactions between static color sources in a finite temperature gluonic medium
+using both high resolution isotropic and anisotropic quenched lattice QCD ensembles. We generated configurations using the naive Wilson action to avoid any artifacts of non-monotonicity and making the BR-method applicable. Using the raw unmodified lattice data, all applicable methods show clear signs of screening of the real part of the potential beyond the transition temperature. After applying a subtraction procedure featured in the HISQ study, we find however that screening disappears from the extracted potential. Check out the <a href="https://link.aps.org/pdf/10.1103/PhysRevD.110.114501">full manuscript</a> for more details.</p>
+<p><img src="BR_iso.png" alt="alt text" width="350"/> <img src="BR_aniso.png" alt="alt 2" width="350"/></p>
+<h4 id="more-coming-soon.">More coming soon&#8230;.</h4>
 <footer>
   <p>Author: Gaurang Parkar<br>
   <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
