--- a/software.html
+++ b/software.html
@@ -5,12 +5,38 @@
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <h1 id="software">Software</h1>
+<h4 id="operating-system">Operating system</h4>
+<p>I use MacOS as my operating system since mid 2022. I had used <a href="https://archlinux.org/">Arch Linux</a> and <a href="https://ubuntu.com/">Ubuntu </a> for many years before that but switched to MacOS due to the performance and power efficiency of Apple Silicon chips. 
+Here are some useful tools to make MacOS more usable. Most of these would require you to have brew and macports.</p>
 <ul>
-<li>I use MacOS as my operating system since mid 2022. I had used <a href="https://archlinux.org/">Arch Linux</a> and <a href="https://ubuntu.com/">Ubuntu </a> for many years before that but switched to MacOS due to the performance and power efficiency of Apple Silicon chips.</li>
+<li><a href="https://rectangleapp.com/">Rectangle</a> : Rectangle is a window manager for MacOS with useful keyboard shortcuts. When using MacOS for the first time I was frustrated due to the lack of a native window manager.</li>
+<li><a href="https://github.com/grishka/NearDrop">Neardrop</a> : Brings the functionality of AirDrop on an android phone using Quickshare&#47;Nearby share.</li>
+<li><a href="https://github.com/MonitorControl/MonitorControl#readme">MonitorControl</a> : Controls the brightness of external displays.</li>
+<li><a href="https://skim-app.sourceforge.io/">Skim</a> : A better pdf reader than preview.</li>
+</ul>
+<h4 id="programming-languages">Programming languages</h4>
+<ul>
 <li>I use <a href="https://neovim.io/">neovim</a> as my main editor for most applications like building this website. I use <a href="https://code.visualstudio.com/">VS Code</a> for larger projects.</li>
 <li>I use the <a href="https://julialang.org/">Julia</a> programming language for most of my calculations. It has almost C&#47;C++ like performance while being sufficiently high level and easy to use.</li>
-<li>I also use <a href="https://www.wolfram.com/mathematica/">Wolfram Mathematica</a> for small calculations and some libraries in C and C++. I can use <a href="https://www.python.org/">python</a>, however I have not used it much since I started using Julia as I find it to be quite slow.</li>
-<li>I use <a href="https://www.latex-project.org/">Latex</a> for writing documents, and <a href="https://ctan.org/pkg/beamer">beamer</a> to make presentations. I also like the MacOS presentation app called <a href="https://en.wikipedia.org/wiki/Keynote_(presentation_software)">Keynote</a>.</li>
+<li>I also use <a href="https://www.wolfram.com/mathematica/">Wolfram Mathematica</a> for small calculations or when symbolic manipulation in needed.</li>
+<li>For high performance computing I use libraries in C and C++ especially because a lot of code is already available for use. </li>
+<li>I started learning programming with <a href="https://www.python.org/">python</a> for a computational physics class, however I have not used it much since I started using Julia as I find it to be quite slow and clunky.</li>
+</ul>
+<h4 id="writing-reports">Writing reports</h4>
+<ul>
+<li>I use <a href="https://www.latex-project.org/">Latex</a> for writing documents.</li>
+<li>I mainly use <a href="https://ctan.org/pkg/beamer">beamer</a> to make presentations. I also like the MacOS presentation app called <a href="https://en.wikipedia.org/wiki/Keynote_(presentation_software)">Keynote</a>.</li>
+</ul>
+<h4 id="useful-libraries">Useful Libraries</h4>
+<p>These are some libraries that I have used for my work over the past few years, in no particular order of importance.</p>
+<ul>
+<li><a href="https://fastsum.gitlab.io/">OpenQCD-fastsum</a> :  This C package written and maintained by the fastsum collaboration extends the OpenQCD code for anisotropic lattices.</li>
+<li><a href="https://github.com/LatticeQCD/SIMULATeQCD">SIMULATeQCD</a> : This C++ package is designed to run Lattice QCD code on Multiple GPU&#8217;s. I used this package to do gauge fixing and measure Wilson Line correlators on already generated configurations.</li>
+<li><a href="https://github.com/Jutho/TensorOperations.jl">TensorOperations</a> : A julia package for fast and efficient tensor operations using the Einstein index notation. </li>
+<li><a href="https://fluxml.ai/">flux</a> : This is a library for machine learning in native Julia.</li>
+<li><a href="https://scikit-learn.org/stable/_">scikit-learn</a> : Machine learning library for python.</li>
+<li><a href="https://drive.google.com/file/d/12qsJWTqzxjQ5itQoAN9HssCfP-vgNTOK/view?usp=sharing">diffgeo</a> : A Mathematica package for doing GR-type tensor algebra and calculus.</li>
+<li><a href="https://zenodo.org/record/5102934">BR Method</a> : A C package that implements the <a href="https://arxiv.org/abs/1307.6106">Bayesian Reconstruction(BR)</a> method for extracting spectral function from Lattice QCD correlators.</li>
 </ul>
 <footer>
   <p>Author: Gaurang Parkar<br>
