--- a/interests.html
+++ b/interests.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Homepage of Gaurang Parkar</title>
-	<h4><a href="index.html">Home</a>  <span style="margin: 0 10px"></span>  <a href="projects.html">Research</a></h4>
+	<h4><a href="index.html">Home</a>  <span style="margin: 0 10px"></span>  <a href="projects.html">Research</a><span style="margin: 0 10px"></span>  <a href="software.html">Software</a></h4>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <h2 id="other-interests">Other Interests</h2>
