--- a/software.html
+++ b/software.html
@@ -20,12 +20,18 @@ Here are some useful tools to make MacOS more usable. Most of these would requir
 <li>I use the <a href="https://julialang.org/">Julia</a> programming language for most of my calculations. It has almost C&#47;C++ like performance while being sufficiently high level and easy to use.</li>
 <li>I also use <a href="https://www.wolfram.com/mathematica/">Wolfram Mathematica</a> for small calculations or when symbolic manipulation in needed.</li>
 <li>For high performance computing I use libraries in C and C++ especially because a lot of code is already available for use. </li>
-<li>I started learning programming with <a href="https://www.python.org/">python</a> for a computational physics class, however I have not used it much since I started using Julia as I find it to be quite slow and clunky.</li>
+<li>I started learning programming with <a href="https://www.python.org/">python</a> for a computational physics class, however I have not used it much since I started using Julia as I find it to be quite slow and clunky. I use it occasionally if there is a package available for doing something that I.</li>
+</ul>
+<h4 id="code-and-data">Code and data</h4>
+<p>A list of some computer programs I have written:</p>
+<ul>
+<li>Pade Reconstruction : Implements <a href="https://journals.aps.org/pr/abstract/10.1103/PhysRev.167.1411">Schlessinger&#8217;s algorithm</a> for analytic continuation using rational function approximation in the Julia language. </li>
 </ul>
 <h4 id="writing-reports">Writing reports</h4>
 <ul>
 <li>I use <a href="https://www.latex-project.org/">Latex</a> for writing documents.</li>
 <li>I mainly use <a href="https://ctan.org/pkg/beamer">beamer</a> to make presentations. I also like the MacOS presentation app called <a href="https://en.wikipedia.org/wiki/Keynote_(presentation_software)">Keynote</a>.</li>
+<li>I use a markdown and HTML to create this website and host it on GitHub.</li>
 </ul>
 <h4 id="useful-libraries">Useful Libraries</h4>
 <p>These are some libraries that I have used for my work over the past few years, in no particular order of importance.</p>
