--- a/software.html
+++ b/software.html
@@ -20,7 +20,7 @@ Here are some useful tools to make MacOS more usable. Most of these would requir
 <li>I use the <a href="https://julialang.org/">Julia</a> programming language for most of my calculations. It has almost C&#47;C++ like performance while being sufficiently high level and easy to use.</li>
 <li>I also use <a href="https://www.wolfram.com/mathematica/">Wolfram Mathematica</a> for small calculations or when symbolic manipulation in needed.</li>
 <li>For high performance computing I use libraries in C and C++ especially because a lot of code is already available for use. </li>
-<li>I started learning programming with <a href="https://www.python.org/">python</a> for a computational physics class, however I have not used it much since I started using Julia as I find it to be quite slow and clunky. I use it occasionally if there is a package available for doing something that I.</li>
+<li>I started learning programming with <a href="https://www.python.org/">python</a> for a computational physics class, however I have not used it much since I started using Julia as I find it to be quite slow. I use it occasionally if there is a package available for doing something that I need.</li>
 </ul>
 <h4 id="code-and-data">Code and data</h4>
 <p>A list of some computer programs I have written:</p>
