--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 <p><img src="BR_iso.png" alt="alt text" width="350"/> <img src="BR_aniso.png" alt="alt 2" width="350"/></p>
 <h4 id="accidental-crossings-of-eigenvalues-in-pt-symmetric-potential">Accidental crossings of eigenvalues in PT-symmetric potential:</h4>
 <p>We study the real discrete spectrum of complex PT-symmetric Scarf-II potential. If the  strength (λ) of the imaginary part of the potential is varied smoothly some pairs of real eigenvalue curves can intersect and cross each other at λ = λ∗. We also show that the corresponding eigenstates at λ = λ∗ are identical or linearly dependent denying degeneracy in one dimension. Other pairs of eigenvalue curves coalesce to complex-conjugate pairs completing the scenario of spontaneous breaking of PT-symmetry at λ = λc. This is in start contrast to what one sees in one dimensional Hermitian potential. Check out the full <a href="https://arxiv.org/pdf/1503.02426">manuscript</a> for more details.</p>
-<p><img src="Accidental_crossing.png" alt="alt text" width="650"/> </p>
+<p><img src="Accidental_crossing.jpg" alt="alt text" width="650"/> </p>
 <h3 id="other-projects">Other projects</h3>
 <h5 id="critical-phenomena-conformal-field-theory-and-the-mera">Critical Phenomena conformal field theory and the MERA:</h5>
 <footer>
