--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
 <p><img src="accidental_crossing.jpg" alt="alt 3" width="650"/> </p>
 <h3 id="other-projects">Other projects</h3>
 <h5 id="critical-phenomena-conformal-field-theory-and-the-mera">Critical Phenomena conformal field theory and the MERA:</h5>
+<p>&#8230;coming soon</p>
 <footer>
   <p>Author: Gaurang Parkar<br>
   <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
