--- a/physics_res.html
+++ b/physics_res.html
@@ -4,10 +4,8 @@
 	<h4><a href="index.html">Home</a>  <span style="margin: 0 10px"></span>  <a href="projects.html">Research</a><span style="margin: 0 10px"></span>  <a href="software.html">Software</a></h4>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
-<h1 id="books">Books</h1>
-<p>A list of books that I have found useful over the years. I have not read all of
-the books in full, but I have gone through most of the content and found it
-interesting.</p>
+<h2 id="some-resources-for-physics">Some resources for Physics</h2>
+<p>Here&#8217;s a list of physics textbooks and other resources that I have used over the years.</p>
 <h4 id="physics-textbooks">Physics textbooks</h4>
 <ul>
 <li><em>Modern Quantum Mechanics by Sakurai and Napolitano</em> : Standard text book for anyone wanting to learn Quantum mechanics. It introduces the topic in a modern way as opposed to the historical way as it was developed.</li>
@@ -17,25 +15,6 @@ interesting.</p>
 <li><em>A First Course in String Theory by Barton Zwiebach</em> : Good introductory book for someone who wants to learn some basics of string theory. The nice thing is that you don&#8217;t need much of a background in field theory or mathematics to pick up and read this one.</li>
 </ul>
 <h2 id="--electrodynamics-and-quantum-mechanics-by-griffiths-good-series-of-introductory-textbooks-for-anyone-getting-into-physics.">- <em>Electrodynamics and Quantum mechanics</em> by Griffiths : Good series of introductory textbooks for anyone getting into physics.</h2>
-<h4 id="economy-and-politics">Economy and politics</h4>
-<ul>
-<li>
-Antifragile: Things That Gain from Disorder by Nassim Taleb : Not a huge fan of
-his style and it can seem a bit cringe at times, but some interesting ideas put
-forth. Tableb has written several books, but I think this one brings together
-most of his ideas in one.</li>
-<li>Manufacturing Consent: The Political Economy of the Mass Media by Noam
-Chomsky and Edward Herman : Chomsky has written a lot of books outside of his
-academic field of Linguistics, but this one is probably his best work and probably one of the
-most interesting books on media analysis.</li>
-<li>Why Nations Fail: The Origins of Power, Prosperity, and Poverty : Interesting read, but their analysis is 
-heavily flawed.</li>
-<li>Das Kapital by Karl Marx: No description needed here.</li>
-</ul>
-<h4 id="philosophy">Philosophy</h4>
-<ul>
-<li>Anti-Oedipus: Capitalism and Schizophrenia</li>
-</ul>
 <footer>
   <p>Author: Gaurang Parkar<br>
   <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
