--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,11 @@
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <h1 id="research">Research</h1>
-<p>I have a broad interest in quantum systems and quantum field theory. Most of my research has revolved around strongly correlated quantum systems and numerical methods to extract properties of them. </p>
+<p>I have a broad interest in quantum systems and quantum field theory. Most of my
+research has revolved around strongly correlated quantum systems and numerical
+methods to extract properties of them. </p>
 <p>Find my <a href="thesis_masters.pdf">Masters thesis</a> and <a href="https://inspirehep.net/files/34a1be4fa827574846fa06c7fd9a3259">PhD thesis</a>.</p>
-<h3 id="peer-reviewed-publications">Peer reviewed publications</h3>
+<h3 id="peer-reviewed-works">Peer reviewed works</h3>
 <h4 id="heavy-quark-potential-on-hisq-lattices">Heavy Quark Potential On HISQ Lattices:</h4>
 <p>The interactions of heavy quark and anti-quark pair are essential in understanding the primordial state of matter created in heavy-ion collisions, the <a href="https://en.wikipedia.org/wiki/Quark%E2%80%93gluon_plasma">quark-gluon plasma </a>. These interactions can be studied through a complex potential between these static colour sources in the presence of a thermal medium. Together with my supervisor Alexander Rothkopf, Rasmus Larsen (postdoc at University of Stavanger) and colleagues at the HotQCD collaboration we studied this potential using lattice QCD simulations using the Highly Improved Staggered Quark(HISQ) action. We computed the Wilson Line correlator in Coulomb gauge and extracted the potential using four different methods; Gaussian fits, HTL-inspired fits, the Pade and Bayesian reconstruction, all having a different set of assumptions. The BR-method was rendered inapplicable due to the presence of non-monotonicity in effective masses at higher temperatures. We found that contrary to previous studies, the real-part of the potential showed no temperature dependence from all methods except for the HTL-inspired fits. Check out the <a href="https://arxiv.org/pdf/2110.11659">full manuscript</a> for more details.</p>
 <p><img src="PaperFig_ReV_6740.png" alt="alt text" width="350"/> <img src="PaperFig_ReV_7825.png" alt="alt 2" width="350"/></p>
@@ -18,8 +20,12 @@
 <p>We study the real discrete spectrum of complex PT-symmetric Scarf-II potential. If the  strength (λ) of the imaginary part of the potential is varied smoothly some pairs of real eigenvalue curves can intersect and cross each other at λ = λ∗. We also show that the corresponding eigenstates at λ = λ∗ are identical or linearly dependent denying degeneracy in one dimension. Other pairs of eigenvalue curves coalesce to complex-conjugate pairs completing the scenario of spontaneous breaking of PT-symmetry at λ = λc. This is in start contrast to what one sees in one dimensional Hermitian potential. Check out the full <a href="https://arxiv.org/pdf/1503.02426">manuscript</a> for more details.</p>
 <p><img src="accidental_crossing.jpg" alt="alt 3" width="650"/> </p>
 <h3 id="other-projects">Other projects</h3>
-<h5 id="critical-phenomena-conformal-field-theory-and-the-mera">Critical Phenomena conformal field theory and the MERA:</h5>
-<p>&#8230;coming soon</p>
+<h4 id="tensor-networks-and-mera">Tensor Networks and MERA:</h4>
+<p>Tensor network states are wave functions using in the study of quantum many body wave functions using in the study of quantum many body systems. 
+They have become powerful tools to analyse low energy properties of many body systems on a lattice. 
+One such tensor network method is called the Multi-scale Entanglement Renormalization Ansatz (MERA). As the name suggests MERA is a renormalization group method to extract properties of many body systems.
+I implemented a modified MERA to extract central charge and scaling dimensions of a 1D bilinear biquadratic critical spin chain. Check out the <a href="gradtalk.pdf">slides</a> of a presentation that I gave during a gradtalk seminar at Stony Brook University.</p>
+<p><img src="MERA_mod.png" alt="alt 4" width="550"/> </p>
 <footer>
   <p>Author: Gaurang Parkar<br>
   <a href="mailto:gaurang@gaurangparkar.com">gaurang@gaurangparkar.com</a></p>
