--- a/software.html
+++ b/software.html
@@ -12,7 +12,7 @@ Here are some useful tools to make MacOS more usable. Most of these would requir
 <li><a href="https://rectangleapp.com/">Rectangle</a> : Rectangle is a window manager for MacOS with useful keyboard shortcuts. When using MacOS for the first time I was frustrated due to the lack of a native window manager.</li>
 <li><a href="https://github.com/grishka/NearDrop">Neardrop</a> : Brings the functionality of AirDrop on an android phone using Quickshare&#47;Nearby share.</li>
 <li><a href="https://github.com/MonitorControl/MonitorControl#readme">MonitorControl</a> : Controls the brightness of external displays.</li>
-<li><a href="https://skim-app.sourceforge.io/">Skim</a> : A better pdf reader than preview.</li>
+<li><a href="https://sioyek.info/">Sioyek</a> : A better pdf reader than preview.</li>
 </ul>
 <h4 id="programming-languages">Programming languages</h4>
 <ul>
