--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@ methods to extract properties of them. </p>
 <p><img src="accidental_crossing.jpg" alt="alt 3" width="650"/> </p>
 <h3 id="other-projects">Other projects</h3>
 <h4 id="tensor-networks-and-mera">Tensor Networks and MERA:</h4>
-<p>Tensor network states are wave functions using in the study of quantum many body wave functions using in the study of quantum many body systems. 
+<p>Tensor network states are quantum many body wave functions used in the study of quantum many body systems. 
 They have become powerful tools to analyse low energy properties of many body systems on a lattice. 
 One such tensor network method is called the Multi-scale Entanglement Renormalization Ansatz (MERA). As the name suggests MERA is a renormalization group method to extract properties of many body systems.
 I implemented a modified MERA to extract central charge and scaling dimensions of a 1D bilinear biquadratic critical spin chain. Check out the <a href="gradtalk.pdf">slides</a> of a presentation that I gave during a gradtalk seminar at Stony Brook University.</p>
