--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <h2 id="about-me">About me</h2>
 <p><img src="photo.jpg" alt="drawing" width="300"/></p>
 <p>My name is Gaurang Parkar and I&#8217;m a (former) theoretical physicist. I was born in the crowded financial and entertainment capital of India, Mumbai. I moved to the south to the city of Tiruchirappalli, Tamil Nadu to pursue my undergraduate degree then to the beautiful city of San Francisco in California where I decided to study physics at San Francisco State University and then to the small town of Stony Brook in Long Island, New York to join the graduate program at Stony Brook University. I then found the opportunity to move to Stavanger, Norway to pursue my PhD in at the University of Stavanger as part of the <a href="https://deeprtp.uis.no/">DeepRTP</a> project where I currently reside.</p>
-<p>I have successfully defended my PhD thesis in June 2024 and decided not to pursue an academic career later. 
+<p>After successfully defending my PhD thesis I decided not to pursue an academic career later. 
  I am looking for some new exciting opportunities which would keep me entertained and at the same time would make use of my skills. If you think that I can be of use to you send me an <a href="gaurang@gaurangparkar.com">email</a>.</p>
 <p>Check out the band <a href="https://www.instagram.com/tri_stykker/">tri stk</a>.</p>
 <h3 id="other-information">Other information</h3>
 <ul>
-<li>Find my <a href="cv_may2024.pdf">CV</a> here.</li>
-<li>Check out my <a href="https://inspirehep.net/authors/1987424">publications</a>.</li>
+<li>Find my <a href="cv_july2025.pdf">CV</a> here.</li>
+<li>Check out my <a href="https://scholar.google.com/citations?user=YYGDkjYAAAAJ&amp;hl=en">publications</a>.</li>
 <li><a href="projects.html">Research</a>.</li>
 <li><a href="software.html">Software</a> tools I use.</li>
 <li>Some other <a href="interests.html">interests</a>.</li>
